main: new, contact-us (versione grezza)

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             </div>
 
             <div class="image flex">
-                <div class="box sx">
+                <div class="box dx">
 
                     <div>
                         testo con immagine sx
@@ -231,7 +231,7 @@
 
                 </div>
 
-                <div class="box dx">
+                <div class="box sx">
 
                     <div>
                         testo con immagine sx
@@ -241,7 +241,7 @@
 
                 </div>
 
-                <div class="box sx">
+                <div class="box dx">
 
                     <div>
                         testo con immagine sx
@@ -251,7 +251,7 @@
 
                 </div>
 
-                <div class="box dx">
+                <div class="box sx">
 
                     <div>
                         testo con immagine sx
@@ -330,41 +330,49 @@
             </div>
 
             <div class="image flex">
-                <div class="box sx">
+                <div class="box dx">
 
                     <img src="images/team_04.jpg" alt="">
 
                     <div>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, recusandae tempora molestiae commodi hic error nam ducimus, porro esse temporibus optio magni veniam, ex laudantium. Nulla iste adipisci pariatur mollitia.
-                    </div>
-
-                </div>
-
-                <div class="box dx">
-
-                    <img src="images/team_03.jpg" alt="">
-
-                    <div>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil iure molestias quasi tempore dicta commodi, consequatur est veritatis neque nemo, animi doloribus voluptas aspernatur expedita, quis esse suscipit? Dicta, placeat!
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, recusandae tempora molestiae
+                        commodi hic error nam ducimus, porro esse temporibus optio magni veniam, ex laudantium. Nulla
+                        iste adipisci pariatur mollitia.
                     </div>
 
                 </div>
 
                 <div class="box sx">
 
-                    <img src="images/team_02.jpg" alt="">
+                    <img src="images/team_03.jpg" alt="">
 
                     <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat officia veniam, nostrum quia modi cum cupiditate dolores, vitae odit ipsum dolorem obcaecati nihil. Dicta dolor consequatur cumque ducimus corporis corrupti.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil iure molestias quasi tempore
+                        dicta commodi, consequatur est veritatis neque nemo, animi doloribus voluptas aspernatur
+                        expedita, quis esse suscipit? Dicta, placeat!
                     </div>
 
                 </div>
 
                 <div class="box dx">
+
+                    <img src="images/team_02.jpg" alt="">
+
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat officia veniam, nostrum quia
+                        modi cum cupiditate dolores, vitae odit ipsum dolorem obcaecati nihil. Dicta dolor consequatur
+                        cumque ducimus corporis corrupti.
+                    </div>
+
+                </div>
+
+                <div class="box sx">
                     <img src="images/team_01.jpg" alt="">
 
                     <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis maxime, sequi eius, facere error dolorum sed minima aspernatur accusantium quaerat dicta provident. Similique dolores deleniti atque corporis ullam, voluptatem tenetur.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis maxime, sequi eius, facere
+                        error dolorum sed minima aspernatur accusantium quaerat dicta provident. Similique dolores
+                        deleniti atque corporis ullam, voluptatem tenetur.
                     </div>
 
                 </div>
@@ -401,22 +409,44 @@
         <!-- what's news -->
         <section class="news container">
             <div class="title-box">
-                <p class="title font-big">lorem</p>
-                <p class="gray">loremloremlorem</p>
+                <p class="title font-big">What's New</p>
+                <p class="gray">Keep up to date with the latest news</p>
                 <img src="images/header_divider.png" alt="">
             </div>
 
-            <div class="images flex">
-                <div class="box">
-                    immagine 1 e testo
+            <div class="image flex">
+                <div class="box dx">
+                    <div class="date gray">October 03, 2014</div>
+
+                    <img src="images/blog_09-525x315.jpg" alt="">
+                    <h1>Drawing and Painting Lessons</h1>
+                    <p>Magna est consectetur interdum modest dictum. Curabitur est faucibus, malesuada esttincidunt etos
+                        et mauris, nunc a libero govum est cuprum <a class="gray" href="#">[...]</a></p>
+                    <div class="line"></div>
+                    icon
                 </div>
 
-                <div class="box">
-                    immagine 2 e testo
+                <div class="box sx dx">
+                    <div class="date gray">October 03, 2014</div>
+
+                    <img src="images/blog_10-525x315.jpg" alt="">
+                    <h1>Drawing and Painting Lessons</h1>
+                    <p>Magna est consectetur interdum modest dictum. Curabitur est faucibus, malesuada esttincidunt etos
+                        et mauris, nunc a libero govum est cuprum <a class="gray" href="#">[...]</a></p>
+                    <div class="line"></div>
+                    icon
+
                 </div>
 
-                <div class="box">
-                    immagine 3 e testo
+                <div class="box sx">
+                    <div class="date gray">October 03, 2014</div>
+
+                    <img src="images/blog_08-525x315.jpg" alt="">
+                    <h1>Drawing and Painting Lessons</h1>
+                    <p>Magna est consectetur interdum modest dictum. Curabitur est faucibus, malesuada esttincidunt etos
+                        et mauris, nunc a libero govum est cuprum <a class="gray" href="#">[...]</a></p>
+                    <div class="line"></div>
+                    icon
                 </div>
             </div>
 
@@ -431,27 +461,47 @@
         <!-- contact us-->
         <section class="contact container">
             <div class="title-box">
-                <p class="title font-big">lorem</p>
-                <p class="gray">loremloremlorem</p>
+                <p class="title font-big">Contact Us</p>
+                <p class="gray">Our postal address and contact details</p>
                 <img src="images/header_divider.png" alt="">
             </div>
 
 
-            <div class="flex">
+            <div class="info flex">
                 <div class="postal box">
-                    Postal Adress
+                    <h1>Adress</h1>
+                    <p class="gray">
+                        Fable Care Center<br>
+                        85 Fentiman Ave<br>
+                        Ottawa, ON K1S 0T7<br>
+                    </p>
                 </div>
 
                 <div class="phone box">
-                    Phone & E-mail
+                    <h1>& E-mail</h1>
+                    <p class="gray">
+                        Phone: 1-800-64-38<br>
+                        Fax: 1-800-64-39<br>
+                        office@fable.com<br>
+                    </p>
                 </div>
 
                 <div class="business box">
-                    Business-Hours
+                    <h1>Business-Hours</h1>
+                    <p class="gray">
+                        Monday – Friday<br>
+                        8.00 am – 5.00 pm<br>
+                        Weekend Closed<br>
+                    </p>
                 </div>
 
                 <div class="sessions box">
-                    Sessions
+                    <h1>Sessions</h1>
+                    <p class="gray">
+                        Mornings, 8 am – 12 noon<br>
+                        Afternoons, 1 pm – 5 pm<br>
+                        Full Day, 8 am – 5 pm<br>                    
+                    </p>
                 </div>
             </div>
 
